olay olya some progress

--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,5 +1,11 @@
+<ion-header>
+  <ion-toolbar>
+    <ion-title>Mapa UFSM</ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-content>
-  <ion-row>
-    <capacitor-google-maps id="map"></capacitor-google-maps>
-  </ion-row>
+  <div class="container">
+    <capacitor-google-map #map></capacitor-google-map>
+  </div>
 </ion-content>
