--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -6,6 +6,6 @@
 
 <ion-content>
   <div class="container">
-    <capacitor-google-map #map></capacitor-google-map>
+    <capacitor-google-map id="mapa" #map></capacitor-google-map>
   </div>
 </ion-content>
